@@ -13,6 +13,7 @@ Changes
 10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0
 
 Fixes
+10/12/08 r372 Ignore PRIVMSG messages sent directly from ircds [closes #1186]
 10/09/08 r366 Fixed P10 MODE not using the correct channel creation timestamp
 10/08/12 r365 inspircd12 now sends proper PING messages
 10/08/12 r364 Fixed SQL schema using TYPE which is deprecated
